--- a/templates/oauth_authorize.html
+++ b/templates/oauth_authorize.html
@@ -1,16 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="/twitter_auth" method="POST">
-    <label for="username">Twitter handle</label>
-    <input id="username" name="username"/>
-    <br/>
-    <label for="email">Twitter email</label>
-    <input id="email" name="email"/>
-    <br/>
-    <label for="password">Twitter password</label>
-    <input id="password" name="password"/>
-    <br/>
-    <input type="submit" value="Log in" />
-</form>
+{% if error %}
+<p>{{ error }}</p>
+{% else %}
+<p>Hi, @{{ username }}</p>
+<p>Do you want to authorize <a href="{{ app_website }}" target="_blank">{{ app_name }}</a> with the follow scopes?</p>
+<p>{{ app_scopes }}</p>
+{% endif %}
 {% endblock %}
